deployments/whoami-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  labels:
    app: whoami 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      namespace: default
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: containous/whoami:latest
          ports:
            - containerPort: 80
          volumeMounts:
          - name: volv
            mountPath: /data
              #  - name: smb
              #    mountPath: "/pv/pv-smb"
      volumes:
        #- name: volv
        #  persistentVolumeClaim:
        #    claimName: longhorn-vol-whoami
        #- name: smb 
        #  persistentVolumeClaim:
        #    claimName: pvc-smb
        - name: volv
          persistentVolumeClaim:
            claimName: sonarr-config-volume
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default 
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: whoami
  type: LoadBalancer
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`whoami.${SECRET_DEV_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: headers-default@file
      services:
        - name: whoami
          port: 80
